# seam-lint

./: CHANGELOG.md  LICENSE  README.md  action.yml  composition-schema.json  pyproject.toml  seam-manifest-schema.json  seam-manifest-spec-v0.1.md
.github/workflows/: seam-lint.yml
audit/: AUDIT_REPORT.md  audit_report.json  financial_composition.yaml  financial_composition_bridged.yaml  financial_pipeline.json  mcp_official_composition.yaml  mcp_official_tools.json
compositions/: auth_pipeline.yaml  data_etl_pipeline.yaml  mcp_fetch_filesystem_git.yaml  mcp_fetch_memory.yaml  web_research_pipeline.yaml
examples/: demo_reflexive.py
src/seam_lint/: __init__.py  __main__.py  cli.py  coboundary.py  diagnostic.py  formatters.py  guard.py  init.py  manifest.py  model.py  ots.py  parser.py  scan.py  serve.py  taxonomy.yaml  witness.py
src/seam_lint/compositions/: code_review_pipeline.yaml  financial_pipeline.yaml  mcp_filesystem_git.yaml  rag_pipeline.yaml
src/seam_lint/infer/: __init__.py  classifier.py  mcp.py
tests/: test_cli.py  test_coboundary.py  test_diagnostic.py  test_guard.py  test_infer.py  test_init.py  test_manifest.py  test_multi_signal.py  test_ots.py  test_parser.py  test_scan.py  test_serve.py  test_witness.py
tests/fixtures/: real_mcp_tools.json  sample_mcp_manifest.json
